<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/allah"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/acceuilImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/accueil" 
        android:contentDescription="@string/balance"/>

    <ImageButton
        android:id="@+id/quitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@color/NULL"
        android:src="@drawable/quitter"
        android:contentDescription="@string/exit" />

    <ImageButton
        android:id="@+id/aide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quitter"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:background="@color/NULL"
        android:src="@drawable/aide"
        android:contentDescription="@string/aide" />

    <ImageButton
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aide"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:background="@color/NULL"
        android:src="@drawable/documentaires" 
        android:contentDescription="@string/about"/>

    <ImageButton
        android:id="@+id/archive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/NULL"
        android:src="@drawable/documents1" 
        android:contentDescription="@string/archive"/>

    <ImageButton
        android:id="@+id/nouveaArbre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/archive"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="true"
        android:background="@color/NULL"
        android:src="@drawable/family_tree"
        android:contentDescription="@string/arbre" />

</RelativeLayout>