<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allah" >

    <Button
        android:id="@+id/Charger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/charger" />



    <Button
        android:id="@+id/Effacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Charger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/effacerSauvegarde" />

    <Button
        android:id="@+id/Retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Effacer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/retour" />

    <Spinner
        android:id="@+id/Sauvegardes"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Charger"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />




    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Sauvegardes"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/nomSauvegarde"
        android:textColor="@color/RED"
        android:textSize="20dp" />

</RelativeLayout>